app-admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-deployment
  template:
    metadata:
      labels:
        app: app-deployment
    spec:
      containers:
      - name: app-deployment
        image: 911781391110.dkr.ecr.ap-northeast-2.amazonaws.com/develop/app-admin:latest
        ports:
        - containerPort: 3000
