external-dns.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
  namespace: external-dns
spec:
  selector:
    matchLabels:
      app: external-dns
  template:
    metadata:
      labels:
        app: external-dns
    spec:
      serviceAccountName: external-dns
      containers:
      - name: external-dns
        image: k8s.gcr.io/external-dns/external-dns:v0.10.2
        args:
        - --source=service
        - --source=ingress
        - --domain-filter=dev.kstadium.io
        - --provider=aws
        - --policy=upsert-only
        - --aws-zone-type=public
        - --registry=txt
        - --txt-owner-id=Z03689522Y6K96S9DKQ8U
      securityContext:
        runAsUser: 1001 # Update this value to a valid user ID for Fargate
        allowPrivilegeEscalation: false # Fargate does not support privilege escalation
      resources:
        limits:
          memory: "256Mi" # Adjust the memory limit based on your requirements
          cpu: "0.25" # Adjust the CPU limit based on your requirements
