sample.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: err-bzz
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: err-bzz-sample-1-deployment
  namespace: err-bzz
  labels:
    app: err-bzz-sample-1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: err-bzz-sample-1
  template:
    metadata:
      labels:
        app: err-bzz-sample-1
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - amd64
                - arm64
      containers:
      - name: nginx
        image: public.ecr.aws/nginx/nginx:1.21
        ports:
        - name: http
          containerPort: 80
        imagePullPolicy: IfNotPresent
      nodeSelector:
        kubernetes.io/os: linux
---
apiVersion: v1
kind: Service
metadata:
  name: err-bzz-sample-1-service
  namespace: err-bzz
  labels:
    app: err-bzz-sample-1
spec:
  selector:
    app: err-bzz-sample-1
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30404
